[package]
name = "cyber-reachability"
version = "0.1.0"
edition = "2024"

[dependencies]
# General purpose executors + data structures
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0",  features = ["derive"] }
toml =  { version = "0.7"   }
clap =  { version = "4.5",  features = ["derive"] }

# Data-collection capabilities



[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

